cabal-version:       2.2

-- The name of the package.
name:                parse-explore

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:             GPL-3.0-or-later

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Edmund Noble

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          edmundnoble@gmail.com

-- A copyright notice.
-- copyright:

-- category:

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

-- Constraint on the version of Cabal needed to build this package.

executable parse-explore
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs

  -- Modules included in this executable, other than Main.
  other-modules: Naive, Unger, RightRecursiveToProductive
                 ,Common, Types, Heur, Grammar, Earley, Greibach
                 ,GeneralCYK, CYK
                 ,Data.Trie,Data.Trie.BitTwiddle,Data.Trie.ByteStringInternal
                 ,Data.Trie.Convenience,Data.Trie.Errors,Data.Trie.Internal

  ghc-options:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.10 && <5
                      ,array
                      ,bytestring
                      ,containers
                      ,directory
                      ,dlist
                      ,hashable
                      ,ansi-wl-pprint
                      ,filepath
                      ,ghc-prim
                      ,kan-extensions
                      ,mmap
                      ,primitive
                      ,transformers
                      ,mtl
                      ,lens
                      ,time
                      ,unix
                      ,pqueue
                      ,text-latin1
                      -- can't use this until the next release which supports my GHC version
                      -- ,bytestring-trie
                      ,binary

  -- Directories containing source files.
  -- hs-source-dirs:

  -- Base language which the package is written in.
  default-language:    Haskell2010

